force-app/main/default/objects/Feedback__c/fields/Behaviour_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_of_Staff__c</fullName>
    <label>Behaviour of Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>