force-app/main/default/objects/Feedback__c/fields/Co_Ordination_of_Teams__c.field-meta.xml
<CustomField>
    <fullName>Co_Ordination_of_Teams__c</fullName>
    <label>Co-Ordination of Teams</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>