force-app/main/default/objects/Feedback__c/fields/Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Test_Results__c</fullName>
    <label>Accuracy of Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>