force-app/main/default/objects/Feedback__c/fields/Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Timeliness__c</fullName>
    <label>Timeliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>