force-app/main/default/objects/Feedback__c/fields/Would_you_Recomend__c.field-meta.xml
<CustomField>
    <fullName>Would_you_Recomend__c</fullName>
    <label>Would you Recomend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>