force-app/main/default/objects/Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Results__c</columns>
    <columns>Behaviour_of_Staff__c</columns>
    <columns>Co_Ordination_of_Teams__c</columns>
    <columns>Would_you_Recomend__c</columns>
    <columns>Timeliness__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>